# python_for_finance

./: .gitignore  2. Numpy_Python.py  Copy of live week3.ipynb  Copy of live week4.ipynb  Copy_of_week6live_3_march_with_QUESTIONS (2).ipynb  Lecture 2.ipynb  README.md  RentModellinginterview5.ipynb  Week 1 data forlab1.xlsx  Week2pandassteps.ipynb  pyproject.toml  week3_noteboook.ipynb
