[tool.poetry]
name = "python-for-finance"
version = "0.1.0"
description = ""
authors = ["Marwin Steiner <marwin.steiner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
jupyter = "^1.1.1"
openpyxl = "^3.1.5"
numpy = "^2.2.2"
statsmodels = "^0.14.4"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
